# malt-inbox

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
malt_crm/: __init__.py  ai.py  api.py  constants.py  dashboard.py  db.py  dirs.py  env.py  models.py  profile.py  scoring.py  sync.py
malt_crm/assets/: dashboard.css  dashboard.html  dashboard.js  settings.html
malt_crm/bootstrap/: __init__.py  html.py  sync.py
tests/: conftest.py  test_ai.py  test_api.py  test_bootstrap_html.py  test_dashboard_fastapi.py  test_launcher.py  test_models.py  test_scoring.py  test_sync.py
