[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "malt-crm-inbox"
version = "0.1.0"
description = "Inbox locale pour Malt avec synchronisation HTTP, résumés IA et réponses suggérées"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "curl-cffi>=0.10.0",
  "pydantic>=2.6.0",
  "requests>=2.32.0",
  "SQLAlchemy>=2.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[tool.setuptools.packages.find]
include = ["malt_crm*"]

[tool.setuptools.package-data]
malt_crm = ["assets/*.html", "assets/*.css", "assets/*.js"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
