# Dépendances : uv uniquement (`uv lock`, `uv sync --frozen`).
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "malt-crm-inbox"
version = "0.1.0"
description = "Inbox locale pour Malt avec synchronisation HTTP, résumés IA et réponses suggérées"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "curl-cffi>=0.10.0",
  "fastapi>=0.115.0",
  "pydantic>=2.6.0",
  "requests>=2.32.0",
  "SQLAlchemy>=2.0.0",
  "uvicorn[standard]>=0.32.0",
]

[project.urls]
Repository = "https://github.com/pointpaul/malt-inbox"

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pre-commit>=4.0.0",
  "pytest>=8.4.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.12.0",
  "vulture>=2.14",
]

[tool.setuptools.packages.find]
include = ["malt_crm*"]

[tool.setuptools.package-data]
malt_crm = ["assets/*.html", "assets/*.css", "assets/*.js"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--cov=malt_crm",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=xml",
  "--cov-fail-under=35",
]

[tool.coverage.run]
branch = true
source = ["malt_crm"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "\\.\\.\\.",
]

[tool.vulture]
min_confidence = 80
paths = ["malt_crm", "main.py"]
exclude = ["tests/"]
ignore_decorators = [
  "@app.api_route",
  "@app.get",
  "@app.post",
  "@app.exception_handler",
]
